--- a/index.html
+++ b/index.html
@@ -1,117 +1,105 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Calcolo Produzione Fusti</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Calcolo Produzione Fusti e Quintali</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="/manifest.json">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
+<body onload="aggiornaTurno()">
     <header>
-        <h1>Calcolatore Produzione Fusti</h1>
+        <h1>Produzione Fusti / Quintali</h1>
+        <div id="turnoStatus">Turno corrente: -</div>
     </header>
 
-    <div id="turnoStatus" class="turno-status"></div>
-
+    <!-- Tabs -->
     <div class="tab-container">
-        <button class="tab-button active" onclick="openTab(event, 'fustiTab')">Fusti</button>
-        <button class="tab-button" onclick="openTab(event, 'quintaliTab')">Quintali</button>
+        <button class="tab-button active" onclick="openTab(event, 'tabFusti')">Fusti</button>
+        <button class="tab-button" onclick="openTab(event, 'tabQuintali')">Quintali</button>
     </div>
 
-    <section id="fustiTab" class="tab-content active">
-        <label for="fustoTipo">Tipo di Fusto</label>
+    <!-- Tab Fusti -->
+    <div id="tabFusti" class="tab-content active">
+        <label for="fustoTipo">Tipo Fusto</label>
         <select id="fustoTipo" onchange="aggiornaVelocita()">
-            <option value="25">25L - 120 fusti/h</option>
-            <option value="20">20L - 33 fusti/h</option>
-            <option value="20sacca">20L Sacca - 22 fusti/h</option>
-            <option value="10">10L - 260 fusti/h</option>
-            <option value="3bag">3L Bag - 9 q/h</option>
+            <option value="25">25L</option>
+            <option value="20">20L</option>
+            <option value="20sacca">20L con sacca</option>
+            <option value="10">10L</option>
+            <option value="3bag">Bag in Tube 3L</option>
         </select>
 
         <div id="macchineInputs" class="hidden">
             <label for="macchina1">Macchina 1 (fusti/h)</label>
-            <input type="number" id="macchina1" placeholder="Inserisci fusti/h">
-
+            <input type="number" id="macchina1" placeholder="Fusti/h">
             <label for="macchina2">Macchina 2 (fusti/h)</label>
-            <input type="number" id="macchina2" placeholder="Inserisci fusti/h">
+            <input type="number" id="macchina2" placeholder="Fusti/h">
         </div>
 
-        <label for="fustiTotali">Fusti da Produrre</label>
-        <input type="number" id="fustiTotali" placeholder="Inserisci quantità">
+        <label for="fustiTotali">Fusti Totali</label>
+        <input type="number" id="fustiTotali" placeholder="Inserisci numero fusti">
 
-        <label for="pausa">Pausa</label>
-        <select id="pausa">
-            <option value="0">Nessuna Pausa</option>
-            <option value="30">Pausa di 30 minuti</option>
-            <option value="60">Pausa di 1 ora</option>
-        </select>
+        <label for="pausa">Pausa (minuti)</label>
+        <input type="number" id="pausa" placeholder="Minuti pausa">
 
-        <label for="cambioMacchina">Tempo di Cambio Macchina</label>
-        <select id="cambioMacchina">
-            <option value="0">Nessun cambio</option>
-            <option value="15">15 minuti</option>
-            <option value="30">30 minuti</option>
-        </select>
+        <label for="cambioMacchina">Cambio Macchina (minuti)</label>
+        <input type="number" id="cambioMacchina" placeholder="Minuti cambio macchina">
 
-        <button onclick="calcolaFusti()">Calcola</button>
+        <button onclick="calcolaFusti()">Calcola Fusti</button>
+
+        <div class="progress-container">
+            <div class="progress-bar" id="progressBarFusti"></div>
+        </div>
 
         <div id="risultatoFusti" class="result"></div>
-        <div id="cronologiaFusti" class="cronologia"></div>
-    </section>
+    </div>
 
-    <section id="quintaliTab" class="tab-content">
-        <label for="fustoTipoQ">Tipo di Fusto</label>
+    <!-- Tab Quintali -->
+    <div id="tabQuintali" class="tab-content">
+        <label for="fustoTipoQ">Tipo Fusto</label>
         <select id="fustoTipoQ" onchange="aggiornaVelocitaQuintali()">
-            <option value="25">25L - 30 q/h</option>
-            <option value="20">20L - 9.9 q/h</option>
-            <option value="20sacca">20L Sacca - 6.6 q/h</option>
-            <option value="10">10L - 26 q/h</option>
-            <option value="3bag">3L Bag - 9 q/h</option>
+            <option value="25">25L</option>
+            <option value="20">20L</option>
+            <option value="20sacca">20L con sacca</option>
+            <option value="10">10L</option>
+            <option value="3bag">Bag in Tube 3L</option>
         </select>
 
-        <label for="quintaliTotali">Quintali da Produrre</label>
-        <input type="number" id="quintaliTotali" placeholder="Inserisci quintali">
+        <label for="quintaliTotali">Quintali Totali</label>
+        <input type="number" id="quintaliTotali" placeholder="Inserisci numero quintali">
 
-        <label for="pausaQ">Pausa</label>
-        <select id="pausaQ">
-            <option value="0">Nessuna Pausa</option>
-            <option value="30">Pausa di 30 minuti</option>
-            <option value="60">Pausa di 1 ora</option>
-        </select>
+        <label for="pausaQ">Pausa (minuti)</label>
+        <input type="number" id="pausaQ" placeholder="Minuti pausa">
 
-        <label for="cambioMacchinaQ">Tempo di Cambio Macchina</label>
-        <select id="cambioMacchinaQ">
-            <option value="0">Nessun cambio</option>
-            <option value="15">15 minuti</option>
-            <option value="30">30 minuti</option>
-        </select>
+        <label for="cambioMacchinaQ">Cambio Macchina (minuti)</label>
+        <input type="number" id="cambioMacchinaQ" placeholder="Minuti cambio macchina">
 
-        <button onclick="calcolaQuintali()">Calcola</button>
+        <button onclick="calcolaQuintali()">Calcola Quintali</button>
 
         <div id="risultatoQuintali" class="result"></div>
-        <div id="cronologiaQuintali" class="cronologia"></div>
-    </section>
+    </div>
 
-    <button onclick="esportaCSV()">Esporta in CSV</button>
+    <!-- Cronologia -->
+    <h2>Cronologia</h2>
+    <select id="filtroTurno" onchange="filtraCronologia()">
+        <option value="tutti">Tutti</option>
+        <option value="Mattino">Mattino</option>
+        <option value="Pomeriggio">Pomeriggio</option>
+    </select>
 
-    <canvas id="grafico-produzione" width="400" height="200"></canvas>
+    <div class="cronologia" id="cronologiaFusti"></div>
+    <div class="cronologia" id="cronologiaQuintali"></div>
 
     <button id="resetCronologia" onclick="resettaCronologia()">Reset Cronologia</button>
+    <button onclick="esportaCSV()">Esporta CSV</button>
 
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then(function(registration) {
-                    console.log('Service Worker registrato con successo:', registration);
-                })
-                .catch(function(error) {
-                    console.log('Errore durante la registrazione del Service Worker:', error);
-                });
-        }
-    </script>
+    <!-- Grafici -->
+    <canvas id="grafico-produzione" width="400" height="200"></canvas>
+    <canvas id="grafico-turni" width="400" height="200"></canvas>
 
+    <audio id="notificaAudio" src="notifica.mp3" preload="auto"></audio>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
